# ameba

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
config/: ameba.conf  control.conf  pin.conf  read.conf  unpin.conf
m4/: args.m4  bpf.m4  cpp.m4  host.m4  version.m4
src/: Makefile.am  Makefile.in  accept.bpf.c  ameba.bpf.c  ameba.c  connect.bpf.c  constants.h  jsonify_record.c  jsonify_record.h  namespace.bpf.c  process_namespace.bpf.c  record.h  vmlinux.h
src/bpf/: Makefile.am  Makefile.in  ameba.bpf.c  ameba.bpf.h  common.mk  current_version.bpf.h  license.bpf.c
src/bpf/event/: hook_name.bpf.h
src/bpf/event/accept/: hook.bpf.c
src/bpf/event/accept/storage/: task.bpf.c
src/bpf/event/audit_log_exit/: hook.bpf.c
src/bpf/event/bind/: hook.bpf.c
src/bpf/event/bind/storage/: task.bpf.c
src/bpf/event/connect/: hook.bpf.c
src/bpf/event/connect/storage/: task.bpf.c
src/bpf/event/kill/: hook.bpf.c
src/bpf/event/kill/storage/: task.bpf.c
src/bpf/event/process_namespace/: hook.bpf.c
src/bpf/event/send_recv/: hook.bpf.c
src/bpf/event/send_recv/storage/: task.bpf.c
src/bpf/events/: accept.bpf.c  audit_log_exit.bpf.c  bind.bpf.c  connect.bpf.c  kill.bpf.c  process_namespace.bpf.c  send.bpf.c  send_recv.bpf.c
src/bpf/events/accept/: hook.bpf.c  storage.bpf.h
src/bpf/events/accept/storage/: task.bpf.c
src/bpf/events/audit_log_exit/: hook.bpf.c
src/bpf/events/bind/: hook.bpf.c  storage.bpf.h
src/bpf/events/bind/storage/: task.bpf.c
src/bpf/events/connect/: hook.bpf.c  storage.bpf.h
src/bpf/events/connect/storage/: task.bpf.c
src/bpf/events/kill/: hook.bpf.c  storage.bpf.h
src/bpf/events/kill/storage/: task.bpf.c
src/bpf/events/process_namespace/: hook.bpf.c
src/bpf/events/send_recv/: hook.bpf.c  storage.bpf.h
src/bpf/events/send_recv/storage/: task.bpf.c
src/bpf/helper/: copy.bpf.c  datatype.bpf.c  datatype.bpf.h  event.bpf.c  event.bpf.h  event_id.bpf.c  log.bpf.c  log.bpf.h  map.bpf.c  output.bpf.c  output.bpf.h  version.bpf.c
src/bpf/helpers/: control.bpf.c  copy.bpf.c  copy.bpf.h  data_copy.bpf.c  data_copy.bpf.h  datatype.bpf.c  datatype.bpf.h  event.bpf.c  event.bpf.h  event_context.bpf.c  event_context.bpf.h  event_id.bpf.c  event_id.bpf.h  log.bpf.c  log.bpf.h  map.bpf.c  map.bpf.h  output.bpf.c  output.bpf.h  record_helper.bpf.c  record_helper.bpf.h  version.bpf.c  version.bpf.h
src/bpf/helpers/task_storage/: connect.bpf.c  connect.bpf.h
src/bpf/maps/: constants.h  map_helper.bpf.c
src/user/: Makefile.am  Makefile.in  ameba.c  common.mk  control.c  convert_data.c  convert_data.h  error.h  jsonify.c  jsonify.h  loader.c  pin.c  types.h  unpin.c  writer.c  writer.h
src/user/api/: Makefile.am  Makefile.in  api.c  api.h  common.c  common.h  context.h  control.c  control.h  handle.c  handle.h  types.h
src/user/api/request/: Makefile.am  Makefile.in  handle.c  handle.h  header.c  header.h  types.h
src/user/api/request/get_control/: Makefile.am  Makefile.in  handle.c  handle.h  types.h
src/user/api/response/: Makefile.am  Makefile.in  header.c  header.h  types.h
src/user/api/response/error/: Makefile.in  create.c  create.h  types.h
src/user/api/response/get_control/: Makefile.am  Makefile.in  create.c  create.h  types.h
src/user/api/server/: Makefile.am  Makefile.in  socket.c  socket.h
src/user/arg/: Makefile.am  Makefile.in  ameba.c  ameba.h  common.c  common.h  control.c  control.h  parse_state.c  parse_state.h  parser.h  pin.c  pin.h  read.c  read.h  unpin.c  unpin.h
src/user/args/: Makefile.am  Makefile.in  ameba.c  ameba.h  control.c  control.h  helper.c  helper.h  loader.c  loader.h  pin.c  pin.h  read.c  read.h  state.c  state.h  unpin.c  unpin.h  user.c  user.h
src/user/config/: Makefile.am  Makefile.in  ameba.c  ameba.h  config.c  config.h  control.c  control.h  pin.c  pin.h  read.c  read.h  unpin.c  unpin.h
src/user/data/converter/: binary.c  converter.c  converter.h  json.c
src/user/data/deserializer/: binary.c  deserializer.h
src/user/data/serializer/: binary.c  json.c  serializer.c  serializer.h
src/user/data/writer/: file.c  writer.h
src/user/helper/: Makefile.am  Makefile.in  lock.c  lock.h  log.c  log.h  prog_op.c  prog_op.h  ring_buffer.c  ring_buffer.h
src/user/helpers/: Makefile.am  Makefile.in  config.c  config.h  log.c  log.h  prog_op.c  prog_op.h
src/user/include/: Makefile.am  Makefile.in  types.h
src/user/jsonify/: Makefile.am  Makefile.in  ameba.c  ameba.h  control.c  control.h  core.c  core.h  log_msg.c  log_msg.h  record.c  record.h  types.c  types.h  user.c  user.h  version.c  version.h
src/user/prog/: Makefile.am  Makefile.in  common.mk
src/user/prog/ameba/: Makefile.am  Makefile.in  main.c  output.c  output.h
src/user/prog/control/: Makefile.am  Makefile.in  main.c
src/user/prog/pin/: Makefile.am  Makefile.in  main.c
src/user/prog/read/: Makefile.am  Makefile.in  main.c
src/user/prog/unpin/: Makefile.am  Makefile.in  main.c
src/user/progs/: Makefile.am  Makefile.in
src/user/progs/ameba/: Makefile.am  Makefile.in  main.c  output.c  output.h
src/user/progs/control/: Makefile.am  Makefile.in  main.c
src/user/progs/pin/: Makefile.am  Makefile.in  main.c
src/user/progs/read/: Makefile.am  Makefile.in  main.c
src/user/progs/unpin/: Makefile.am  Makefile.in  main.c
src/user/record/: Makefile.am  Makefile.in
src/user/record/deserializer/: Makefile.am  Makefile.in  binary.c  deserializer.h
src/user/record/serializer/: Makefile.am  Makefile.in  binary.c  binary.h  json.c  json.h  serializer.c  serializer.h
src/user/record/writer/: Makefile.am  Makefile.in  dir.c  dir.h  file.c  file.h  net.c  net.h  writer.h
src/user/writer/: json.c  writer.h
tests/: Makefile.am  Makefile.in  common.mk
tests/user/arg/: Makefile.am  Makefile.in  ameba.cpp  common.cpp  control.cpp  parse_state.cpp  pin.cpp  read.cpp  test_helper.cpp  test_helper.hpp  unpin.cpp
tests/user/args/: Makefile.am  Makefile.in  ameba.cpp  control.c  control.cpp  helper.cpp  pin.cpp  read.cpp  unpin.cpp  user.cpp
(+53 files in other folders)
